Update endpoints, events and fix rules